Migrate statistics-service to Spring Boot 3.2/Java 21
- Update pom.xml: Spring Boot 3.2.5, Java 21, Spring Cloud 2023.0.3
- Detach from root parent POM to allow independent migration
- Replace spring-cloud-starter-oauth2 with spring-boot-starter-oauth2-resource-server
- Replace spring-cloud-starter-sleuth with micrometer-tracing-bridge-brave
- Replace spring-cloud-netflix-hystrix-stream with spring-cloud-starter-circuitbreaker-resilience4j
- Remove guava dependency (replaced with Java stdlib)
- Migrate all javax.* imports to jakarta.*
- Update OAuth2 config: ResourceServerConfigurerAdapter -> SecurityFilterChain with JWT
- Update @PreAuthorize expressions for Spring Security 6.x scopes
- Replace codehaus Jackson with fasterxml Jackson
- Update MongoDB converters: DBObject -> Document with @ReadingConverter/@WritingConverter
- Add @Query annotation for DataPointRepository.findByIdAccount (Spring Data MongoDB 4.x)
- Extract MongoConfig for custom conversions (needed by @DataMongoTest)
- Delete deprecated CustomUserInfoTokenServices
- Migrate all 6 test files from JUnit 4 to JUnit 5
- Update de.flapdoodle.embed.mongo to spring3x 4.11.0
- Update Dockerfile: java:8-jre -> eclipse-temurin:21-jre
- Add spring-cloud-starter-bootstrap for bootstrap.yml support

Co-Authored-By: Jaime Mizrachi <jaime@cognition.ai>