@@ -1,6 +1,5 @@
 package com.piggymetrics.statistics.service;
 
-import com.google.common.collect.ImmutableMap;
 import com.piggymetrics.statistics.domain.*;
 import com.piggymetrics.statistics.domain.timeseries.DataPoint;
 import com.piggymetrics.statistics.domain.timeseries.DataPointId;
@@ -35,18 +34,12 @@ public class StatisticsServiceImpl implements StatisticsService {
 	@Autowired
 	private ExchangeRatesService ratesService;
 
-	/**
-	 * {@inheritDoc}
-	 */
 	@Override
 	public List<DataPoint> findByAccountName(String accountName) {
-		Assert.hasLength(accountName);
+		Assert.hasLength(accountName, "Account name must not be empty");
 		return repository.findByIdAccount(accountName);
 	}
 
-	/**
-	 * {@inheritDoc}
-	 */
 	@Override
 	public DataPoint save(String accountName, Account account) {
 
@@ -89,17 +82,13 @@ public class StatisticsServiceImpl implements StatisticsService {
 				.map(ItemMetric::getAmount)
 				.reduce(BigDecimal.ZERO, BigDecimal::add);
 
-		return ImmutableMap.of(
+		return Map.of(
 				StatisticMetric.EXPENSES_AMOUNT, expensesAmount,
 				StatisticMetric.INCOMES_AMOUNT, incomesAmount,
 				StatisticMetric.SAVING_AMOUNT, savingAmount
 		);
 	}
 
-	/**
-	 * Normalizes given item amount to {@link Currency#getBase()} currency with
-	 * {@link TimePeriod#getBase()} time period
-	 */
 	private ItemMetric createItemMetric(Item item) {
 
 		BigDecimal amount = ratesService
