@@ -1,23 +1,24 @@
 package com.piggymetrics.statistics.service;
 
-import com.google.common.collect.ImmutableMap;
 import com.piggymetrics.statistics.client.ExchangeRatesClient;
 import com.piggymetrics.statistics.domain.Currency;
 import com.piggymetrics.statistics.domain.ExchangeRatesContainer;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.util.Map;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.*;
-import static org.mockito.MockitoAnnotations.initMocks;
 
-public class ExchangeRatesServiceImplTest {
+@ExtendWith(MockitoExtension.class)
+class ExchangeRatesServiceImplTest {
 
 	@InjectMocks
 	private ExchangeRatesServiceImpl ratesService;
@@ -25,16 +26,11 @@ public class ExchangeRatesServiceImplTest {
 	@Mock
 	private ExchangeRatesClient client;
 
-	@Before
-	public void setup() {
-		initMocks(this);
-	}
-
 	@Test
-	public void shouldReturnCurrentRatesWhenContainerIsEmptySoFar() {
+	void shouldReturnCurrentRatesWhenContainerIsEmptySoFar() {
 
 		ExchangeRatesContainer container = new ExchangeRatesContainer();
-		container.setRates(ImmutableMap.of(
+		container.setRates(Map.of(
 				Currency.EUR.name(), new BigDecimal("0.8"),
 				Currency.RUB.name(), new BigDecimal("80")
 		));
@@ -50,10 +46,10 @@ public class ExchangeRatesServiceImplTest {
 	}
 
 	@Test
-	public void shouldNotRequestRatesWhenTodaysContainerAlreadyExists() {
+	void shouldNotRequestRatesWhenTodaysContainerAlreadyExists() {
 
 		ExchangeRatesContainer container = new ExchangeRatesContainer();
-		container.setRates(ImmutableMap.of(
+		container.setRates(Map.of(
 				Currency.EUR.name(), new BigDecimal("0.8"),
 				Currency.RUB.name(), new BigDecimal("80")
 		));
@@ -70,10 +66,10 @@ public class ExchangeRatesServiceImplTest {
 	}
 
 	@Test
-	public void shouldConvertCurrency() {
+	void shouldConvertCurrency() {
 
 		ExchangeRatesContainer container = new ExchangeRatesContainer();
-		container.setRates(ImmutableMap.of(
+		container.setRates(Map.of(
 				Currency.EUR.name(), new BigDecimal("0.8"),
 				Currency.RUB.name(), new BigDecimal("80")
 		));
@@ -88,8 +84,9 @@ public class ExchangeRatesServiceImplTest {
 		assertTrue(expectedConvertionResult.compareTo(result) == 0);
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void shouldFailToConvertWhenAmountIsNull() {
-		ratesService.convert(Currency.EUR, Currency.RUB, null);
+	@Test
+	void shouldFailToConvertWhenAmountIsNull() {
+		assertThrows(IllegalArgumentException.class, () ->
+				ratesService.convert(Currency.EUR, Currency.RUB, null));
 	}
 }
